✨ Update example to include latest features

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -14,6 +14,9 @@
   </ion-header>
 
   <div id="container">
-    <ion-button (click)="someAction()">Click to donate</ion-button>
+    <ion-button (click)="someAction(1)">Click to donate sample 1</ion-button>
+    <ion-button (click)="someAction(2)">Click to donate sample 2</ion-button>
+    <ion-button (click)="deleteOne(1)">Click to delete sample 1</ion-button>
+    <ion-button (click)="deleteAll()">Click to delete all</ion-button>
   </div>
 </ion-content>
