✨ Update example to plugin version 2.2.0

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -16,6 +16,7 @@
   <div id="container">
     <ion-button (click)="someAction(1)">Click to donate sample 1</ion-button>
     <ion-button (click)="someAction(2)">Click to donate sample 2</ion-button>
+    <ion-button (click)="presentAction()">Click to create action and present modal</ion-button>
     <ion-button (click)="deleteOne(1)">Click to delete sample 1</ion-button>
     <ion-button (click)="deleteAll()">Click to delete all</ion-button>
   </div>
